--- a/public/acm/AlaatvCustomFiles/css/fixThemeStyle.css
+++ b/public/acm/AlaatvCustomFiles/css/fixThemeStyle.css
@@ -130,88 +130,14 @@ select.form-control {
         padding: 10px 5px 30px 5px;
     }
 
-
-    /*.m-content > .row {*/
-    /*    margin-left: -5px;*/
-    /*    margin-right: -5px;*/
-    /*}*/
-    /*.m-content > .row > .col,*/
-    /*.m-content > .row > .col-1,*/
-    /*.m-content > .row > .col-10,*/
-    /*.m-content > .row > .col-11,*/
-    /*.m-content > .row > .col-12,*/
-    /*.m-content > .row > .col-2,*/
-    /*.m-content > .row > .col-3,*/
-    /*.m-content > .row > .col-4,*/
-    /*.m-content > .row > .col-5,*/
-    /*.m-content > .row > .col-6,*/
-    /*.m-content > .row > .col-7,*/
-    /*.m-content > .row > .col-8,*/
-    /*.m-content > .row > .col-9,*/
-    /*.m-content > .row > .col-auto,*/
-    /*.m-content > .row > .col-lg,*/
-    /*.m-content > .row > .col-lg-1,*/
-    /*.m-content > .row > .col-lg-10,*/
-    /*.m-content > .row > .col-lg-11,*/
-    /*.m-content > .row > .col-lg-12,*/
-    /*.m-content > .row > .col-lg-2,*/
-    /*.m-content > .row > .col-lg-3,*/
-    /*.m-content > .row > .col-lg-4,*/
-    /*.m-content > .row > .col-lg-5,*/
-    /*.m-content > .row > .col-lg-6,*/
-    /*.m-content > .row > .col-lg-7,*/
-    /*.m-content > .row > .col-lg-8,*/
-    /*.m-content > .row > .col-lg-9,*/
-    /*.m-content > .row > .col-lg-auto,*/
-    /*.m-content > .row > .col-md,*/
-    /*.m-content > .row > .col-md-1,*/
-    /*.m-content > .row > .col-md-10,*/
-    /*.m-content > .row > .col-md-11,*/
-    /*.m-content > .row > .col-md-12,*/
-    /*.m-content > .row > .col-md-2,*/
-    /*.m-content > .row > .col-md-3,*/
-    /*.m-content > .row > .col-md-4,*/
-    /*.m-content > .row > .col-md-5,*/
-    /*.m-content > .row > .col-md-6,*/
-    /*.m-content > .row > .col-md-7,*/
-    /*.m-content > .row > .col-md-8,*/
-    /*.m-content > .row > .col-md-9,*/
-    /*.m-content > .row > .col-md-auto,*/
-    /*.m-content > .row > .col-sm,*/
-    /*.m-content > .row > .col-sm-1,*/
-    /*.m-content > .row > .col-sm-10,*/
-    /*.m-content > .row > .col-sm-11,*/
-    /*.m-content > .row > .col-sm-12,*/
-    /*.m-content > .row > .col-sm-2,*/
-    /*.m-content > .row > .col-sm-3,*/
-    /*.m-content > .row > .col-sm-4,*/
-    /*.m-content > .row > .col-sm-5,*/
-    /*.m-content > .row > .col-sm-6,*/
-    /*.m-content > .row > .col-sm-7,*/
-    /*.m-content > .row > .col-sm-8,*/
-    /*.m-content > .row > .col-sm-9,*/
-    /*.m-content > .row > .col-sm-auto,*/
-    /*.m-content > .row > .col-xl,*/
-    /*.m-content > .row > .col-xl-1,*/
-    /*.m-content > .row > .col-xl-10,*/
-    /*.m-content > .row > .col-xl-11,*/
-    /*.m-content > .row > .col-xl-12,*/
-    /*.m-content > .row > .col-xl-2,*/
-    /*.m-content > .row > .col-xl-3,*/
-    /*.m-content > .row > .col-xl-4,*/
-    /*.m-content > .row > .col-xl-5,*/
-    /*.m-content > .row > .col-xl-6,*/
-    /*.m-content > .row > .col-xl-7,*/
-    /*.m-content > .row > .col-xl-8,*/
-    /*.m-content > .row > .col-xl-9,*/
-    /*.m-content > .row > .col-xl-auto {*/
-    /*    padding-left: 5px;*/
-    /*    padding-right: 5px;*/
-    /*}*/
-
     .row {
         margin-left: -5px;
         margin-right: -5px;
+    }
+
+    .certificates-row {
+        margin-left: -5px !important;
+        margin-right: -5px !important;
     }
     .col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
         padding-left: 5px;
@@ -219,6 +145,26 @@ select.form-control {
     }
     .m-portlet__body {
         padding: 5px !important;
+    }
+}
+
+@media only screen and (max-width: 1250px) {
+    .m-header-menu .m-menu__nav > .m-menu__item {
+        padding-left: 3px;
+        padding-right: 3px;
+    }
+    .m-topbar .m-topbar__nav.m-nav > .m-nav__item {
+        padding: 0 3px;
+    }
+}
+
+@media only screen and (max-width: 1128px) {
+    .m-header-menu .m-menu__nav > .m-menu__item {
+        padding-left: 0;
+        padding-right: 0;
+    }
+    .m-topbar .m-topbar__nav.m-nav > .m-nav__item {
+        padding: 0;
     }
 }
 
