--- a/public/acm/AlaatvCustomFiles/components/MultiLevelSearch/style.css
+++ b/public/acm/AlaatvCustomFiles/components/MultiLevelSearch/style.css
@@ -100,13 +100,13 @@
     content: ' ';
     position: absolute;
     bottom: -15px;
-    left: 50%;
-    border-top: solid 0px transparent;
-    border-right: solid 25px transparent;
-    border-left: solid 25px transparent;
-    border-bottom: solid 10px #4285f4;
-    width: 50px;
-    height: 10px;
+    left: 62%;
+    border-bottom: solid 0 transparent;
+    border-right: solid 7px transparent;
+    border-left: solid 7px transparent;
+    border-top: solid 10px #f4516c;
+    width: 14px;
+    height: 12px;
 }
 
 .a--multi-level-search .filterNavigationWarper .filterNavigationStep:after {
