--- a/public/acm/AlaatvCustomFiles/css/customStyle.css
+++ b/public/acm/AlaatvCustomFiles/css/customStyle.css
@@ -267,9 +267,41 @@
 .carousel-indicators li {
     background-color: #ffd295;
 }
+
+.liveOn {
+    box-shadow: 0 0 0 rgb(255, 255, 255);
+    animation: a--pulse 1.2s infinite;
+}
+
 /*media query*/
 @media only screen and (max-width: 1024px) {
     .m-header-menu .m-menu__nav > .m-menu__item .m-menu__submenu > .m-menu__subnav > .m-menu__item {
         background: transparent;
+    }
+}
+
+@-webkit-keyframes a--pulse {
+    0% {
+        -webkit-box-shadow:0 0 0 0 rgba(255,255,255,.4)
+    }
+    70% {
+        -webkit-box-shadow:0 0 0 10px rgba(255,255,255,0)
+    }
+    100% {
+        -webkit-box-shadow:0 0 0 0 rgba(255,255,255,0)
+    }
+}
+@keyframes a--pulse {
+    0% {
+        -moz-box-shadow:0 0 0 0 rgba(255,255,255,.4);
+        box-shadow:0 0 0 0 rgba(255,255,255,.4)
+    }
+    70% {
+        -moz-box-shadow:0 0 0 10px rgba(255,255,255,0);
+        box-shadow:0 0 0 10px rgba(255,255,255,0)
+    }
+    100% {
+        -moz-box-shadow:0 0 0 0 rgba(255,255,255,0);
+        box-shadow:0 0 0 0 rgba(255,255,255,0)
     }
 }
