--- a/resources/theme/default/src/sass/framework/components/general/_include.scss
+++ b/resources/theme/default/src/sass/framework/components/general/_include.scss
@@ -26,10 +26,10 @@
 //== Typography
 @import "typography/badge";
 @import "typography/link";
-//@import "typography/section";
-//@import "typography/separator";
-//@import "typography/code";
-//@import "typography/type";
+@import "typography/section";
+@import "typography/separator";
+@import "typography/code";
+@import "typography/type";
 @import "typography/divider";
 
 //== Buttons
