content show bug fix

--- a/resources/theme/default/src/sass/framework/components/general/_include.scss
+++ b/resources/theme/default/src/sass/framework/components/general/_include.scss
@@ -27,9 +27,9 @@
 @import "typography/badge";
 @import "typography/link";
 @import "typography/section";
-@import "typography/separator";
-@import "typography/code";
-@import "typography/type";
+//@import "typography/separator";
+//@import "typography/code";
+//@import "typography/type";
 @import "typography/divider";
 
 //== Buttons
