--- a/resources/theme/default/src/sass/demo/demo12/_framework-config.scss
+++ b/resources/theme/default/src/sass/demo/demo12/_framework-config.scss
@@ -20,8 +20,8 @@ $m--root-font: (
 
 
 $m--font-families: (
-        regular: 'IRANSans, Tahoma, Arial, Geneva, sans-serif',
-        heading: 'IRANSans, Tahoma, Arial, Geneva, sans-serif'
+        regular: 'IRANSans',
+        heading: 'IRANSans'
 );
 
 //== Global arrow style
