--- a/public/acm/AlaatvCustomFiles/css/fixThemeStyle.css
+++ b/public/acm/AlaatvCustomFiles/css/fixThemeStyle.css
@@ -123,6 +123,10 @@ select.form-control {
     overflow: auto;
 }
 
+.btn-group.m-btn-group--pill:not(.btn-group-vertical) .btn:only-child {
+    border-radius: 60px;
+}
+
 /*media query*/
 @media only screen and (max-width: 767.98px) {
     .m-body .m-content {
