--- a/public/acm/AlaatvCustomFiles/components/OwlCarouselType2/style.scss
+++ b/public/acm/AlaatvCustomFiles/components/OwlCarouselType2/style.scss
@@ -121,7 +121,7 @@
         .a--block-titleWrapper {
           //background: #828282;
           padding: 5px 10px;
-          height: 45px;
+          height: 30px;
           display: flex;
           align-items: center;
 
@@ -130,6 +130,12 @@
             //color: white;
             min-height: 0;
             position: relative;
+
+            -webkit-line-clamp: 1;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
           }
         }
 
@@ -150,6 +156,12 @@
             top: 0;
             min-height: 0;
             position: relative;
+
+            -webkit-line-clamp: 2;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
           }
         }
 
@@ -177,14 +189,20 @@
 
         .a--block-titleWrapper {
           padding: 5px 10px;
-          height: 60px;
+          height: 45px;
           display: flex;
-          align-items: center;
+          align-items: flex-start;
 
           a {
             top: 0;
             min-height: 0;
             position: relative;
+
+            -webkit-line-clamp: 2;
+            overflow : hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
           }
         }
 
