--- a/theme/default/src/sass/framework/components/general/_include.scss
+++ b/theme/default/src/sass/framework/components/general/_include.scss
@@ -27,9 +27,9 @@
 @import "typography/badge";
 @import "typography/link";
 @import "typography/section";
-//@import "typography/separator";
-//@import "typography/code";
-//@import "typography/type";
+@import "typography/separator";
+@import "typography/code";
+@import "typography/type";
 @import "typography/divider";
 
 //== Buttons
@@ -41,10 +41,10 @@
 
 //== Lists
 @import "lists/search";
-//@import "lists/timeline";
-//@import "lists/settings";
-//@import "lists/badge";
-//@import "lists/pics";
+@import "lists/timeline";
+@import "lists/settings";
+@import "lists/badge";
+@import "lists/pics";
 
 //== Cards
 @import "cards/user";
@@ -56,43 +56,43 @@
 //== Portlets
 @import "portlets/portlets";
 
-//== Timeline
+////== Timeline
 //@import "timeline/timeline-1";
 //@import "timeline/timeline-2";
 //@import "timeline/timeline-3";
 
 //== Widgets
-@import "widgets/widget1";
-@import "widgets/widget2";
-@import "widgets/widget3";
-@import "widgets/widget4";
-@import "widgets/widget5";
-@import "widgets/widget6";
-@import "widgets/widget7";
-@import "widgets/widget8";
-@import "widgets/widget9";
-@import "widgets/widget10";
-@import "widgets/widget11";
-@import "widgets/widget12";
-@import "widgets/widget13";
-@import "widgets/widget14";
-@import "widgets/widget15";
-@import "widgets/widget16";
-@import "widgets/widget17";
-@import "widgets/widget18";
+//@import "widgets/widget1";
+//@import "widgets/widget2";
+//@import "widgets/widget3";
+//@import "widgets/widget4";
+//@import "widgets/widget5";
+//@import "widgets/widget6";
+//@import "widgets/widget7";
+//@import "widgets/widget8";
+//@import "widgets/widget9";
+//@import "widgets/widget10";
+//@import "widgets/widget11";
+//@import "widgets/widget12";
+//@import "widgets/widget13";
+//@import "widgets/widget14";
+//@import "widgets/widget15";
+//@import "widgets/widget16";
+//@import "widgets/widget17";
+//@import "widgets/widget18";
 @import "widgets/widget19";
-@import "widgets/widget20";
-@import "widgets/widget20";
-@import "widgets/widget21";
-@import "widgets/widget22";
-@import "widgets/widget23";
-@import "widgets/widget24";
-@import "widgets/widget25";
-@import "widgets/widget26";
+//@import "widgets/widget20";
+//@import "widgets/widget20";
+//@import "widgets/widget21";
+//@import "widgets/widget22";
+//@import "widgets/widget23";
+//@import "widgets/widget24";
+//@import "widgets/widget25";
+//@import "widgets/widget26";
 @import "widgets/widget27";
-@import "widgets/widget28";
-@import "widgets/widget29";
-@import "widgets/widget30";
+//@import "widgets/widget28";
+//@import "widgets/widget29";
+//@import "widgets/widget30";
 
 //== Demo
 //@import "demo/icon";
@@ -105,7 +105,7 @@
 @import "forms/option";
 
 //== Table
-//@import "table/table";
+@import "table/table";
 
 //== Wizard
 //@import "wizard/wizard-base";
