--- a/public/acm/AlaatvCustomFiles/css/customStyle.css
+++ b/public/acm/AlaatvCustomFiles/css/customStyle.css
@@ -322,6 +322,17 @@
 }
 
 
+.lazy-image:not(.lazy-done) {
+    -webkit-filter: blur(5px); /* Safari 6.0 - 9.0 */
+    filter: blur(5px);
+    transition: all 1.5s;
+}
+.lazy-image.lazy-done {
+    -webkit-filter: blur(0px); /* Safari 6.0 - 9.0 */
+    filter: blur(0px);
+    transition: all 1.5s;
+}
+
 
 /*media query*/
 @media only screen and (max-width: 1024px) {
