--- a/public/acm/webFonts/IRANSans/css/fontiran.css
+++ b/public/acm/webFonts/IRANSans/css/fontiran.css
@@ -16,83 +16,83 @@ This set of fonts are used in this project under the license: (.....)
 --------------------------------------------------------------------------------------
 *	
 **/
-@font-face {
-	font-family: IRANSans;
-	font-style: normal;
-	font-weight: bold;
-	src: url('../fonts/eot/IRANSansWeb_Bold.eot');
-	src: url('/acm/webFonts/IRANSans/fonts/eot/IRANSansWeb_Bold.eot?#iefix') format('embedded-opentype'),  /* IE6-8 */
-		 url('/acm/webFonts/IRANSans/fonts/woff2/IRANSansWeb_Bold.woff2') format('woff2'),  /* FF39+,Chrome36+, Opera24+*/
-		 url('/acm/webFonts/IRANSans/fonts/woff/IRANSansWeb_Bold.woff') format('woff'),  /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
-		 url('/acm/webFonts/IRANSans/fonts/ttf/IRANSansWeb_Bold.ttf') format('truetype');
-	font-display: swap;
-}
-@font-face {
-	font-family: IRANSans;
-	font-style: normal;
-	font-weight: 500;
-	src: url('/acm/webFonts/IRANSans/fonts/eot/IRANSansWeb_Medium.eot');
-	src: url('/acm/webFonts/IRANSans/fonts/eot/IRANSansWeb_Medium.eot?#iefix') format('embedded-opentype'),  /* IE6-8 */
-		 url('/acm/webFonts/IRANSans/fonts/woff2/IRANSansWeb_Medium.woff2') format('woff2'),  /* FF39+,Chrome36+, Opera24+*/
-		 url('/acm/webFonts/IRANSans/fonts/woff/IRANSansWeb_Medium.woff') format('woff'),  /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
-		 url('/acm/webFonts/IRANSans/fonts/ttf/IRANSansWeb_Medium.ttf') format('truetype');
-	font-display: swap;
-}
-@font-face {
-	font-family: IRANSans;
-	font-style: normal;
-	font-weight: 300;
-	src: url('/acm/webFonts/IRANSans/fonts/eot/IRANSansWeb_Light.eot');
-	src: url('/acm/webFonts/IRANSans/fonts/eot/IRANSansWeb_Light.eot?#iefix') format('embedded-opentype'),  /* IE6-8 */
-		 url('/acm/webFonts/IRANSans/fonts/woff2/IRANSansWeb_Light.woff2') format('woff2'),  /* FF39+,Chrome36+, Opera24+*/
-		 url('/acm/webFonts/IRANSans/fonts/woff/IRANSansWeb_Light.woff') format('woff'),  /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
-		 url('/acm/webFonts/IRANSans/fonts/ttf/IRANSansWeb_Light.ttf') format('truetype');
-	font-display: swap;
-}
-@font-face {
-	font-family: IRANSans;
-	font-style: normal;
-	font-weight: 200;
-	src: url('/acm/webFonts/IRANSans/fonts/eot/IRANSansWeb_UltraLight.eot');
-	src: url('/acm/webFonts/IRANSans/fonts/eot/IRANSansWeb_UltraLight.eot?#iefix') format('embedded-opentype'),  /* IE6-8 */
-		 url('/acm/webFonts/IRANSans/fonts/woff2/IRANSansWeb_UltraLight.woff2') format('woff2'),  /* FF39+,Chrome36+, Opera24+*/
-		 url('/acm/webFonts/IRANSans/fonts/woff/IRANSansWeb_UltraLight.woff') format('woff'),  /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
-		 url('/acm/webFonts/IRANSans/fonts/ttf/IRANSansWeb_UltraLight.ttf') format('truetype');
-	font-display: swap;
-}
-@font-face {
-	font-family: IRANSans;
-	font-style: normal;
-	font-weight: normal;
-	src: url('/acm/webFonts/IRANSans/fonts/eot/IRANSansWeb.eot');
-	src: url('/acm/webFonts/IRANSans/fonts/eot/IRANSansWeb.eot?#iefix') format('embedded-opentype'),  /* IE6-8 */
-		 url('/acm/webFonts/IRANSans/fonts/woff2/IRANSansWeb.woff2') format('woff2'),  /* FF39+,Chrome36+, Opera24+*/
-		 url('/acm/webFonts/IRANSans/fonts/woff/IRANSansWeb.woff') format('woff'),  /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
-		 url('/acm/webFonts/IRANSans/fonts/ttf/IRANSansWeb.ttf') format('truetype');
-	font-display: swap;
-}
-@font-face {
-	font-family: IRANSans;
-	font-style: normal;
-	font-weight: bold;
-	src: url('/acm/webFonts/IRANSans/farsi_numeral/eot/IRANSansWeb(FaNum)_Bold.eot');
-	src: url('/acm/webFonts/IRANSans/farsi_numeral/eot/IRANSansWeb(FaNum)_Bold.eot?#iefix') format('embedded-opentype'),  /* IE6-8 */
-	url('/acm/webFonts/IRANSans/farsi_numeral/woff2/IRANSansWeb(FaNum)_Bold.woff2') format('woff2'),  /* FF39+,Chrome36+, Opera24+*/
-	url('/acm/webFonts/IRANSans/farsi_numeral/woff/IRANSansWeb(FaNum)_Bold.woff') format('woff'),  /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
-	url('/acm/webFonts/IRANSans/farsi_numeral/ttf/IRANSansWeb(FaNum)_Bold.ttf') format('truetype');
-	font-display: swap;
-}
-@font-face {
-	font-family: IRANSans;
-	font-style: normal;
-	font-weight: 500;
-	src: url('/acm/webFonts/IRANSans/farsi_numeral/eot/IRANSansWeb(FaNum)_Medium.eot');
-	src: url('/acm/webFonts/IRANSans/farsi_numeral/eot/IRANSansWeb(FaNum)_Medium.eot?#iefix') format('embedded-opentype'),  /* IE6-8 */
-	url('/acm/webFonts/IRANSans/farsi_numeral/woff2/IRANSansWeb(FaNum)_Medium.woff2') format('woff2'),  /* FF39+,Chrome36+, Opera24+*/
-	url('/acm/webFonts/IRANSans/farsi_numeral/woff/IRANSansWeb(FaNum)_Medium.woff') format('woff'),  /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
-	url('/acm/webFonts/IRANSans/farsi_numeral/ttf/IRANSansWeb(FaNum)_Medium.ttf') format('truetype');
-	font-display: swap;
-}
+/*@font-face {*/
+/*	font-family: IRANSans;*/
+/*	font-style: normal;*/
+/*	font-weight: bold;*/
+/*	src: url('../fonts/eot/IRANSansWeb_Bold.eot');*/
+/*	src: url('/acm/webFonts/IRANSans/fonts/eot/IRANSansWeb_Bold.eot?#iefix') format('embedded-opentype'),  !* IE6-8 *!*/
+/*		 url('/acm/webFonts/IRANSans/fonts/woff2/IRANSansWeb_Bold.woff2') format('woff2'),  !* FF39+,Chrome36+, Opera24+*!*/
+/*		 url('/acm/webFonts/IRANSans/fonts/woff/IRANSansWeb_Bold.woff') format('woff'),  !* FF3.6+, IE9, Chrome6+, Saf5.1+*!*/
+/*		 url('/acm/webFonts/IRANSans/fonts/ttf/IRANSansWeb_Bold.ttf') format('truetype');*/
+/*	font-display: swap;*/
+/*}*/
+/*@font-face {*/
+/*	font-family: IRANSans;*/
+/*	font-style: normal;*/
+/*	font-weight: 500;*/
+/*	src: url('/acm/webFonts/IRANSans/fonts/eot/IRANSansWeb_Medium.eot');*/
+/*	src: url('/acm/webFonts/IRANSans/fonts/eot/IRANSansWeb_Medium.eot?#iefix') format('embedded-opentype'),  !* IE6-8 *!*/
+/*		 url('/acm/webFonts/IRANSans/fonts/woff2/IRANSansWeb_Medium.woff2') format('woff2'),  !* FF39+,Chrome36+, Opera24+*!*/
+/*		 url('/acm/webFonts/IRANSans/fonts/woff/IRANSansWeb_Medium.woff') format('woff'),  !* FF3.6+, IE9, Chrome6+, Saf5.1+*!*/
+/*		 url('/acm/webFonts/IRANSans/fonts/ttf/IRANSansWeb_Medium.ttf') format('truetype');*/
+/*	font-display: swap;*/
+/*}*/
+/*@font-face {*/
+/*	font-family: IRANSans;*/
+/*	font-style: normal;*/
+/*	font-weight: 300;*/
+/*	src: url('/acm/webFonts/IRANSans/fonts/eot/IRANSansWeb_Light.eot');*/
+/*	src: url('/acm/webFonts/IRANSans/fonts/eot/IRANSansWeb_Light.eot?#iefix') format('embedded-opentype'),  !* IE6-8 *!*/
+/*		 url('/acm/webFonts/IRANSans/fonts/woff2/IRANSansWeb_Light.woff2') format('woff2'),  !* FF39+,Chrome36+, Opera24+*!*/
+/*		 url('/acm/webFonts/IRANSans/fonts/woff/IRANSansWeb_Light.woff') format('woff'),  !* FF3.6+, IE9, Chrome6+, Saf5.1+*!*/
+/*		 url('/acm/webFonts/IRANSans/fonts/ttf/IRANSansWeb_Light.ttf') format('truetype');*/
+/*	font-display: swap;*/
+/*}*/
+/*@font-face {*/
+/*	font-family: IRANSans;*/
+/*	font-style: normal;*/
+/*	font-weight: 200;*/
+/*	src: url('/acm/webFonts/IRANSans/fonts/eot/IRANSansWeb_UltraLight.eot');*/
+/*	src: url('/acm/webFonts/IRANSans/fonts/eot/IRANSansWeb_UltraLight.eot?#iefix') format('embedded-opentype'),  !* IE6-8 *!*/
+/*		 url('/acm/webFonts/IRANSans/fonts/woff2/IRANSansWeb_UltraLight.woff2') format('woff2'),  !* FF39+,Chrome36+, Opera24+*!*/
+/*		 url('/acm/webFonts/IRANSans/fonts/woff/IRANSansWeb_UltraLight.woff') format('woff'),  !* FF3.6+, IE9, Chrome6+, Saf5.1+*!*/
+/*		 url('/acm/webFonts/IRANSans/fonts/ttf/IRANSansWeb_UltraLight.ttf') format('truetype');*/
+/*	font-display: swap;*/
+/*}*/
+/*@font-face {*/
+/*	font-family: IRANSans;*/
+/*	font-style: normal;*/
+/*	font-weight: normal;*/
+/*	src: url('/acm/webFonts/IRANSans/fonts/eot/IRANSansWeb.eot');*/
+/*	src: url('/acm/webFonts/IRANSans/fonts/eot/IRANSansWeb.eot?#iefix') format('embedded-opentype'),  !* IE6-8 *!*/
+/*		 url('/acm/webFonts/IRANSans/fonts/woff2/IRANSansWeb.woff2') format('woff2'),  !* FF39+,Chrome36+, Opera24+*!*/
+/*		 url('/acm/webFonts/IRANSans/fonts/woff/IRANSansWeb.woff') format('woff'),  !* FF3.6+, IE9, Chrome6+, Saf5.1+*!*/
+/*		 url('/acm/webFonts/IRANSans/fonts/ttf/IRANSansWeb.ttf') format('truetype');*/
+/*	font-display: swap;*/
+/*}*/
+/*@font-face {*/
+/*	font-family: IRANSans;*/
+/*	font-style: normal;*/
+/*	font-weight: bold;*/
+/*	src: url('/acm/webFonts/IRANSans/farsi_numeral/eot/IRANSansWeb(FaNum)_Bold.eot');*/
+/*	src: url('/acm/webFonts/IRANSans/farsi_numeral/eot/IRANSansWeb(FaNum)_Bold.eot?#iefix') format('embedded-opentype'),  !* IE6-8 *!*/
+/*	url('/acm/webFonts/IRANSans/farsi_numeral/woff2/IRANSansWeb(FaNum)_Bold.woff2') format('woff2'),  !* FF39+,Chrome36+, Opera24+*!*/
+/*	url('/acm/webFonts/IRANSans/farsi_numeral/woff/IRANSansWeb(FaNum)_Bold.woff') format('woff'),  !* FF3.6+, IE9, Chrome6+, Saf5.1+*!*/
+/*	url('/acm/webFonts/IRANSans/farsi_numeral/ttf/IRANSansWeb(FaNum)_Bold.ttf') format('truetype');*/
+/*	font-display: swap;*/
+/*}*/
+/*@font-face {*/
+/*	font-family: IRANSans;*/
+/*	font-style: normal;*/
+/*	font-weight: 500;*/
+/*	src: url('/acm/webFonts/IRANSans/farsi_numeral/eot/IRANSansWeb(FaNum)_Medium.eot');*/
+/*	src: url('/acm/webFonts/IRANSans/farsi_numeral/eot/IRANSansWeb(FaNum)_Medium.eot?#iefix') format('embedded-opentype'),  !* IE6-8 *!*/
+/*	url('/acm/webFonts/IRANSans/farsi_numeral/woff2/IRANSansWeb(FaNum)_Medium.woff2') format('woff2'),  !* FF39+,Chrome36+, Opera24+*!*/
+/*	url('/acm/webFonts/IRANSans/farsi_numeral/woff/IRANSansWeb(FaNum)_Medium.woff') format('woff'),  !* FF3.6+, IE9, Chrome6+, Saf5.1+*!*/
+/*	url('/acm/webFonts/IRANSans/farsi_numeral/ttf/IRANSansWeb(FaNum)_Medium.ttf') format('truetype');*/
+/*	font-display: swap;*/
+/*}*/
 @font-face {
 	font-family: IRANSans;
 	font-style: normal;
@@ -104,25 +104,25 @@ This set of fonts are used in this project under the license: (.....)
 	url('/acm/webFonts/IRANSans/farsi_numeral/ttf/IRANSansWeb(FaNum)_Light.ttf') format('truetype');
 	font-display: swap;
 }
-@font-face {
-	font-family: IRANSans;
-	font-style: normal;
-	font-weight: 200;
-	src: url('/acm/webFonts/IRANSans/farsi_numeral/eot/IRANSansWeb(FaNum)_UltraLight.eot');
-	src: url('/acm/webFonts/IRANSans/farsi_numeral/eot/IRANSansWeb(FaNum)_UltraLight.eot?#iefix') format('embedded-opentype'),  /* IE6-8 */
-	url('/acm/webFonts/IRANSans/farsi_numeral/woff2/IRANSansWeb(FaNum)_UltraLight.woff2') format('woff2'),  /* FF39+,Chrome36+, Opera24+*/
-	url('/acm/webFonts/IRANSans/farsi_numeral/woff/IRANSansWeb(FaNum)_UltraLight.woff') format('woff'),  /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
-	url('/acm/webFonts/IRANSans/farsi_numeral/ttf/IRANSansWeb(FaNum)_UltraLight.ttf') format('truetype');
-	font-display: swap;
-}
-@font-face {
-	font-family: IRANSans;
-	font-style: normal;
-	font-weight: normal;
-	src: url('/acm/webFonts/IRANSans/farsi_numeral/eot/IRANSansWeb(FaNum).eot');
-	src: url('/acm/webFonts/IRANSans/farsi_numeral/eot/IRANSansWeb(FaNum).eot?#iefix') format('embedded-opentype'),  /* IE6-8 */
-	url('/acm/webFonts/IRANSans/farsi_numeral/woff2/IRANSansWeb(FaNum).woff2') format('woff2'),  /* FF39+,Chrome36+, Opera24+*/
-	url('/acm/webFonts/IRANSans/farsi_numeral/woff/IRANSansWeb(FaNum).woff') format('woff'),  /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
-	url('/acm/webFonts/IRANSans/farsi_numeral/ttf/IRANSansWeb(FaNum).ttf') format('truetype');
-	font-display: swap;
-}
+/*@font-face {*/
+/*	font-family: IRANSans;*/
+/*	font-style: normal;*/
+/*	font-weight: 200;*/
+/*	src: url('/acm/webFonts/IRANSans/farsi_numeral/eot/IRANSansWeb(FaNum)_UltraLight.eot');*/
+/*	src: url('/acm/webFonts/IRANSans/farsi_numeral/eot/IRANSansWeb(FaNum)_UltraLight.eot?#iefix') format('embedded-opentype'),  !* IE6-8 *!*/
+/*	url('/acm/webFonts/IRANSans/farsi_numeral/woff2/IRANSansWeb(FaNum)_UltraLight.woff2') format('woff2'),  !* FF39+,Chrome36+, Opera24+*!*/
+/*	url('/acm/webFonts/IRANSans/farsi_numeral/woff/IRANSansWeb(FaNum)_UltraLight.woff') format('woff'),  !* FF3.6+, IE9, Chrome6+, Saf5.1+*!*/
+/*	url('/acm/webFonts/IRANSans/farsi_numeral/ttf/IRANSansWeb(FaNum)_UltraLight.ttf') format('truetype');*/
+/*	font-display: swap;*/
+/*}*/
+/*@font-face {*/
+/*	font-family: IRANSans;*/
+/*	font-style: normal;*/
+/*	font-weight: normal;*/
+/*	src: local('IRANSans'), url('/acm/webFonts/IRANSans/farsi_numeral/eot/IRANSansWeb(FaNum).eot');*/
+/*	src: local('IRANSans'), url('/acm/webFonts/IRANSans/farsi_numeral/eot/IRANSansWeb(FaNum).eot?#iefix') format('embedded-opentype'),  !* IE6-8 *!*/
+/*	url('/acm/webFonts/IRANSans/farsi_numeral/woff2/IRANSansWeb(FaNum).woff2') format('woff2'),  !* FF39+,Chrome36+, Opera24+*!*/
+/*	url('/acm/webFonts/IRANSans/farsi_numeral/woff/IRANSansWeb(FaNum).woff') format('woff'),  !* FF3.6+, IE9, Chrome6+, Saf5.1+*!*/
+/*	url('/acm/webFonts/IRANSans/farsi_numeral/ttf/IRANSansWeb(FaNum).ttf') format('truetype');*/
+/*	font-display: swap;*/
+/*}*/
