--- a/public/acm/AlaatvCustomFiles/components/OwlCarouselType2/style.scss
+++ b/public/acm/AlaatvCustomFiles/components/OwlCarouselType2/style.scss
@@ -69,6 +69,7 @@
           width: 40%;
           background: #000000c9;
           color: white;
+          z-index: 9;
 
 
           .a--block-set-count {
