--- a/public/acm/AlaatvCustomFiles/css/page/pages/shop.css
+++ b/public/acm/AlaatvCustomFiles/css/page/pages/shop.css
@@ -92,6 +92,12 @@
 }
 
 /*media query*/
+@media only screen and (max-width: 767.98px) {
+    .shopNavItemsWraper {
+        margin-right: -5px;
+        margin-left: -5px;
+    }
+}
 @media only screen and (max-width: 1199px) {
     .shopNavItemsWraper .row[class*="m-row--col-separator-"] > div:last-child {
         border-bottom: 1px solid #ebedf2;
