--- a/public/acm/AlaatvCustomFiles/css/customStyle.css
+++ b/public/acm/AlaatvCustomFiles/css/customStyle.css
@@ -289,6 +289,13 @@
     font-family: "Font Awesome 5 Free";
     content: "\f00d";
 }
+.alert-dismissible .close {
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+}
+.alert-dismissible .close:before {
+    content: "\f00d";
+}
 
 .alert.m-alert--default {
     background: #f7f8fa;
