--- a/public/acm/AlaatvCustomFiles/css/fixThemeStyle.css
+++ b/public/acm/AlaatvCustomFiles/css/fixThemeStyle.css
@@ -102,6 +102,11 @@ select.form-control {
     z-index: 1061;
 }
 
+
+.note-toolbar {
+    z-index: 90 !important;
+}
+
 .m-badge.a-badge--square {
     border-radius: 0;
 }
