--- a/public/css/user-orders.css
+++ b/public/css/user-orders.css
@@ -1,1 +1,20 @@
-.orderTotalyInfoWraper .table tr:first-child td{border:none}.orderDetailes-orderprouctList .orderProductItemPrice{display:ruby}.orderProductItemPrice .a--productPrice{white-space:nowrap}
+#user-orderList table tr td,
+#user-orderList table tr th {
+    /*vertical-align: middle;*/
+}
+
+.orderTotalyInfoWraper .table tr:first-child td {
+    border: none;
+}
+
+.orderDetailes-orderprouctList .orderProductItemPrice {
+    display: ruby;
+}
+
+#user-instalmentsList .onlinePayment {
+    width: 100px;
+}
+
+.orderProductItemPrice .a--productPrice {
+    white-space: nowrap;
+}
