--- a/public/acm/AlaatvCustomFiles/components/OwlCarouselType2/style.scss
+++ b/public/acm/AlaatvCustomFiles/components/OwlCarouselType2/style.scss
@@ -65,6 +65,7 @@
 
           position: absolute;
           right: 0;
+          top: 0;
           height: 100%;
           width: 40%;
           background: #000000c9;
@@ -99,11 +100,18 @@
 
 
         .a--block-set-author-pic {
-          width: 40px;
-          height: 40px;
+          /* width: 40px; */
+          /* height: 40px; */
+          /* border-radius: 100px; */
+          /* overflow: hidden; */
+
+          width: 40%;
+          height: 40%;
           border-radius: 100px;
           overflow: hidden;
-
+          display: flex;
+          align-items: flex-end;
+            
           img {
             width: 100%;
           }
