--- a/public/css/user-orders.css
+++ b/public/css/user-orders.css
@@ -1,1 +1,1 @@
-.orderTotalyInfoWraper .table tr:first-child td{border:none}.orderDetailes-orderprouctList .orderProductItemPrice{display:ruby}.orderProductItemPrice .a--productPrice{white-space:nowrap}
+.orderTotalyInfoWraper .table tr:first-child td{border:none}.orderDetailes-orderprouctList .orderProductItemPrice{display:ruby}#user-instalmentsList .onlinePayment{width:100px}.orderProductItemPrice .a--productPrice{white-space:nowrap}
