--- a/public/acm/AlaatvCustomFiles/components/SearchBoxFilter/searchResult.scss
+++ b/public/acm/AlaatvCustomFiles/components/SearchBoxFilter/searchResult.scss
@@ -10,11 +10,17 @@
       position: relative;
       z-index: 3;
       background: white;
-      display: flex;
-      justify-content: flex-start;
+      //display: flex;
+      //justify-content: flex-start;
       cursor: pointer;
+      margin-bottom: 10px;
+      * {
+        position: relative;
+        z-index: 3;
+      }
       .pic {
         width: 25%;
+        float: right;
         img {
           max-width: 100%;
         }
@@ -23,6 +29,11 @@
         position: relative;
         padding: 15px 5px;
         width: 75%;
+        display: flex;
+        align-items: stretch;
+        flex-flow: column;
+        justify-content: flex-start;
+        float: right;
         .title {
           z-index: 2;
           position: relative;
@@ -33,13 +44,32 @@
         .detailes {
           z-index: 2;
           position: relative;
+          display: flex;
+          flex-flow: column;
+          align-items: stretch;
+          align-self: stretch;
+          height: 100%;
+          padding-bottom: 40px;
+          max-height: calc(100% - 110px);
           .lesson {
-
+            width: 100%;
+          }
+          .summary {
+            width: 100%;
+            //max-height: calc( 100% - 65px);
+            overflow: hidden;
+            text-align: justify;
+            max-height: 40px;
+            margin-top: 10px;
           }
           .publishedDate {
-
+            width: 100%;
+            position: absolute;
+            bottom: 0;
+            right: 0;
           }
         }
+
         .contentHover {
           position: absolute;
           top: 0;
@@ -48,6 +78,36 @@
           height: 100%;
           z-index: 1;
           transition: all 0.5s;
+        }
+      }
+    }
+  }
+  .carouselType {
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    .item {
+      .pic {
+        img {
+          max-width: 100%;
+          min-width: 100%;
+        }
+      }
+      .content {
+        .title {
+
+        }
+        .detailes {
+          .lesson {
+
+          }
+          .summary {
+
+          }
+          .publishedDate {
+
+          }
         }
       }
     }
