--- a/public/acm/AlaatvCustomFiles/css/page/pages/content-search.css
+++ b/public/acm/AlaatvCustomFiles/css/page/pages/content-search.css
@@ -103,6 +103,23 @@
     top: -5px;
 }
 
+.SearchBoxFilter .GroupFilters .body .m-checkbox {
+    transition: all 0.2s;
+}
+.SearchBoxFilter .GroupFilters .body .m-checkbox:hover {
+    background-color: #ff90003d;
+}
+
+.SearchBoxFilter .GroupFilters .body .showMoreItems {
+    width: 100%;
+    background: white;
+    border: none;
+    text-align: right;
+    padding-right: 30px;
+    position: absolute;
+    bottom: 0;
+    height: 20px;
+}
 
 @media only screen and (min-width: 1190px)  {
     .ProductAndSetAndVideoWraper {
