--- a/public/acm/AlaatvCustomFiles/components/ScrollCarousel/style.scss
+++ b/public/acm/AlaatvCustomFiles/components/ScrollCarousel/style.scss
@@ -128,6 +128,7 @@
   overflow-x: auto;
   width: 100%;
   overflow-y: hidden;
+  padding-bottom: 5px;
   .item {
     position: relative;
     margin-left: 10px;
