--- a/public/acm/AlaatvCustomFiles/components/ScrollCarousel/style.scss
+++ b/public/acm/AlaatvCustomFiles/components/ScrollCarousel/style.scss
@@ -129,6 +129,8 @@
   width: 100%;
   overflow-y: hidden;
   padding-bottom: 5px;
+  scrollbar-color: #ff9000 #ffe0b8;
+  scrollbar-width: thin;
   .item {
     position: relative;
     margin-left: 10px;
