content search update

--- a/public/acm/AlaatvCustomFiles/components/ScrollCarousel/style.scss
+++ b/public/acm/AlaatvCustomFiles/components/ScrollCarousel/style.scss
@@ -251,6 +251,10 @@
         }
         .a--block-set-count-icon {
           color: white;
+          svg {
+            width: 25px;
+            fill: white;
+          }
         }
       }
       .a--block-set-author-pic {
